Fix: string length

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         saltElem.innerText = salt;
         passwordElem.innerText = password;
         key1Elem.innerText = key;
-        lengthElem.innerText = "Length: " + key.length;
+        lengthElem.innerText = "Length: " + key.toString().length;
     </script>
 </body>
 
