--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id='salt'></div>
     <div id='password'></div>
-    <div id='key1'></div>
+    <div id='key'></div>
     <div id='length'></div>
 
 
@@ -18,7 +18,7 @@
 
         var saltElem = document.getElementById('salt');
         var passwordElem = document.getElementById('password');
-        var key1Elem = document.getElementById('key1');
+        var keyElem = document.getElementById('key');
         var lengthElem = document.getElementById('length');
 
         saltElem.innerText = salt;
